<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_centerVertical="true"
        android:id="@+id/form"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">


        <android.support.design.widget.TextInputLayout
            android:id="@+id/accountNo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/accNo"
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:hint="@string/hint_acc"

                android:singleLine="true"
                android:text="@string/hint_acc_no" />
        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/accountNo">

            <EditText
                android:id="@+id/input_name"
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:hint="@string/hint_full"
                android:singleLine="true"
                android:text="@string/hint_name" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/input_layout_name">

            <EditText

                android:id="@+id/input_email"
                android:layout_width="220dp"


                android:layout_height="wrap_content"


                android:hint="@string/hint_email_user"
                android:inputType="textEmailAddress"
                android:text="@string/hint_email" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_password"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/input_layout_email">

            <EditText
                android:id="@+id/input_password"
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:hint="@string/hint_password_user"
                android:inputType="textPassword"
                android:text="@string/hint_password" />
        </android.support.design.widget.TextInputLayout>
    </RelativeLayout>

    <RelativeLayout
        android:layout_centerVertical="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/form">

        <ImageView
            android:id="@+id/img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/paypal" />

        <TextView
            android:layout_centerHorizontal="true"
            android:id="@+id/amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/img"
            android:textSize="25sp"
            android:text="$5000" />
    </RelativeLayout>

    <Button
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/form"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Next"
        android:id="@+id/next"
        android:textSize="20sp"
        />
</RelativeLayout>
